# tv-renamer

./: .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml
assets/: tv-renamer-gtk  tv-renamer.desktop
ci/: before_deploy.ps1  before_deploy.sh  script.sh
debian/DEBIAN/: control  copyright
src/: main.rs
src/backend/: common.rs  logging.rs  man.rs  mimetypes.rs  mod.rs  tokenizer.rs  traits.rs
src/frontend/: cli.rs  gtk_interface.glade  gtk_interface.rs
src/frontend/cli/: man.rs  mod.rs
src/frontend/gtk3/: gtk_interface.glade  mod.rs
