[package]
name = "tv-renamer"
version = "0.2.6"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "A TV series renaming application that supports adding titles to episodes using TVDB and sports a CLI and optional GTK3 interface"
repository = "https://github.com/mmstick/tv-renamer"
readme = "README.md"
keywords = ["gtk", "media", "rename", "tv", "tvdb"]
license = "LGPL-3.0"

[features]
enable_gtk = ["gtk", "gdk"]

[dependencies]
chrono = "0.2.21"
tvdb = "0.2.0"
gtk = { version = "0.0.7", features = ["v3_14"], optional = true }
gdk = { version = "0.3.0", optional = true }
